// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App size select Test get default size filter select with actions  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  color: #2E2E2E;
}

<div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
        >
          Size
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          style="background-color: white; border-radius: 32px; width: 120px;"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" "
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
            role="button"
            tabindex="0"
          >
            <p
              class="MuiTypography-root-356 c0 MuiTypography-body1-358"
              data-testid="size-filter-M"
            >
              M
            </p>
          </div>
          <input
            data-testid="size-filter-select"
            type="hidden"
            value="M"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-399 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-400"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiFormControl-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root sc-AykKF gyGoah MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink="true"
      >
        Size
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        style="background-color: white; border-radius: 32px; width: 120px;"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" "
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          role="button"
          tabindex="0"
        >
          <p
            class="MuiTypography-root-356 sc-AykKG jjimnK MuiTypography-body1-358"
            data-testid="size-filter-M"
          >
            M
          </p>
        </div>
        <input
          data-testid="size-filter-select"
          type="hidden"
          value="M"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-399 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-400"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size filter with actions  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c1 {
  margin-left: 4px;
  margin-right: 4px;
  min-width: 90px !important;
  min-height: 36px !important;
  font-size: 12px;
  border-radius: 24px;
}

.c0 {
  margin: 4px;
  display: inline-block;
}

.c0 button {
  border-radius: 4px;
  min-height: 28px !important;
  min-width: 55px !important;
  line-height: 20px;
}

.c0:first-child {
  margin-left: 0;
}

.c0:last-child {
  margin-right: 0;
}

<div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-M"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              M
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-L"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              L
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XS"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XS
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XXL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XXL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AykKD fruMGD"
    >
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-M"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            M
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-L"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            L
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XS"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XS
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XXL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XXL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size select  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c1 {
  margin-left: 4px;
  margin-right: 4px;
  min-width: 90px !important;
  min-height: 36px !important;
  font-size: 12px;
  border-radius: 24px;
}

.c0 {
  margin: 4px;
  display: inline-block;
}

.c0 button {
  border-radius: 4px;
  min-height: 28px !important;
  min-width: 55px !important;
  line-height: 20px;
}

.c0:first-child {
  margin-left: 0;
}

.c0:last-child {
  margin-right: 0;
}

<div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-M"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              M
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-L"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              L
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XS"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XS
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XXL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XXL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AykKD fruMGD"
    >
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-M"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            M
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-L"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            L
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XS"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XS
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XXL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XXL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-AykKE eUXmXs"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AykKC cCFxmr MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size select no params  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=""
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AykKD fruMGD"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size select type dropdown  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  color: #2E2E2E;
}

<div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
        >
          Size
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          style="background-color: white; border-radius: 32px; width: 120px;"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" "
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
            role="button"
            tabindex="0"
          >
            <p
              class="MuiTypography-root-198 c0 MuiTypography-body1-200"
              data-testid="size-filter-XS"
            >
              XS
            </p>
          </div>
          <input
            data-testid="size-filter-select"
            type="hidden"
            value="XS"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-241 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-242"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiFormControl-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root sc-AykKF gyGoah MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink="true"
      >
        Size
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        style="background-color: white; border-radius: 32px; width: 120px;"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" "
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          role="button"
          tabindex="0"
        >
          <p
            class="MuiTypography-root-198 sc-AykKG jjimnK MuiTypography-body1-200"
            data-testid="size-filter-XS"
          >
            XS
          </p>
        </div>
        <input
          data-testid="size-filter-select"
          type="hidden"
          value="XS"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-241 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-242"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size select type select no params  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
        >
          Size
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
          style="background-color: white; border-radius: 32px; width: 120px;"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" "
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
            role="button"
            tabindex="0"
          >
            <span>
              ​
            </span>
          </div>
          <input
            data-testid="size-filter-select"
            type="hidden"
            value="M"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-83 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-84"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiFormControl-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root sc-AykKF gyGoah MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
        data-shrink="true"
      >
        Size
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        style="background-color: white; border-radius: 32px; width: 120px;"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" "
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          data-testid="size-filter-select"
          type="hidden"
          value="M"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-83 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-84"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
